<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <Space
            android:layout_width="match_parent"
            android:layout_height="100dp" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <EditText
                android:id="@+id/number1"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="2"
                android:ems="10"
                android:hint="@string/hint_number"
                android:inputType="numberDecimal"
                android:textAlignment="center" />

            <TextView
                android:id="@+id/operator"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:editable="false"
                android:textAlignment="center"
                android:textSize="18sp" />

            <EditText
                android:id="@+id/number2"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="2"
                android:ems="10"
                android:hint="@string/hint_number"
                android:inputType="numberDecimal"
                android:textAlignment="center" />
        </LinearLayout>

        <TextView
            android:id="@+id/textView10"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:editable="false"
            android:text="@string/equals"
            android:textAlignment="center"
            android:textSize="18sp" />

        <TextView
            android:id="@+id/result"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:editable="true"
            android:hint="@string/hint_result"
            android:textAlignment="center"
            android:textSize="18sp" />

        <Space
            android:layout_width="match_parent"
            android:layout_height="100dp" />

        <RadioGroup
            android:id="@+id/OperatorsRadioGroup"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <RadioButton
                android:id="@+id/radioplus"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/radio_plus" />

            <RadioButton
                android:id="@+id/radiominus"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/radio_minus" />

            <RadioButton
                android:id="@+id/radiodiv"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/radio_div" />

            <RadioButton
                android:id="@+id/radiomul"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/radio_mul" />

        </RadioGroup>

        <Space
            android:layout_width="match_parent"
            android:layout_height="100dp" />

        <Switch
            android:id="@+id/historySwitch"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/switch_store_history"
            android:textSize="18sp" />

        <Button
            android:id="@+id/historyShow"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:enabled="false"
            android:text="@string/button_show_history"
            android:textSize="18sp" />

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>